--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "ember-addon"
   ],
-  "repository": "github:ollar/draggable-mixin.git",
+  "repository": "github:ollar/draggable-mixin",
   "license": "MIT",
   "author": "ollar",
   "directories": {
